--- a/extension/base.css
+++ b/extension/base.css
@@ -177,10 +177,6 @@
   gap: 4px;
 }
 
-.iconed-link .heart-icon {
-  color: #e53935;
-}
-
 /* Footer sponsor heart button */
 .footer-sponsor-heart {
   display: inline-flex;
@@ -191,15 +187,15 @@
   cursor: pointer;
   padding: 0;
   font: inherit;
-  color: inherit;
+  color: var(--clojure-blue);
 }
 
 .footer-sponsor-heart:hover {
   text-decoration: underline;
 }
 
-.footer-sponsor-heart:hover .sponsor-heart-icon {
-  color: #e91e63;
+.footer-sponsor-heart .sponsor-heart-icon {
+  color: var(--color-sponsor-heart);
 }
 
 /* Buttons */
